[tool.poetry]
name = "black-desert-analytics"
version = "0.1.0"
description = ""
authors = ["Wes Hahn <52631646+wesh92@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
polars = "^0.18.13"
duckdb = "^0.8.1"
toml = "^0.10.2"
ibis-framework = {version="^6.1.0", extras=["duckdb"]}
requests = "^2.31.0"
pydantic = "^2.1.1"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
